# blink

./: .gitignore  .gitmodules  README.md  download_ticker.py  download_top_nasdaq_200.py  get_company_info.py  nasdaq_tickers.txt
dev/: README.md  app.js  index.html  package.json  server.js  styles.css  technical-indicators.js
historical_data/: AAPL.csv  AAPL_historical_data.csv  ABNB.csv  ADBE.csv  ADI.csv  ADSK.csv  AFRM.csv  AI.csv  AIV.csv  ALGN.csv  AMAT.csv  AMD.csv  AMH.csv  AMT.csv  AMZN.csv  ANSS.csv  APP.csv  ARM.csv  ASML.csv  AVB.csv  AVGO.csv  AZN.csv  BABA.csv  BANF.csv  BIIB.csv  BILI.csv  BILL.csv  BKNG.csv  BKR.csv  BMRN.csv  BXP.csv  BYND.csv  CARG.csv  CCEP.csv  CCI.csv  CDNS.csv  CEG.csv  CHTR.csv  CMCSA.csv  COIN.csv  (+164 more)
m3/: Cargo.toml
m3/src/: main.rs
m3_js/: app.js  index.html  server.js  simple-candlestick.js  styles.css  technical-indicators.js
