[package]
name = "m3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.13", features = ["tokio", "debug", "svg", "canvas"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
plotters = "0.3.5"
plotters-iced = "0.11"
tokio = { version = "1", features = ["full"] }
